# GTA

./: README.md
offb/: CMakeLists.txt  yolov4-tiny-opt.param
offb/launch/: camera_and_lidar.launch  camera_and_lidar_2.launch
offb/src/: Calibrate.cpp  camera copy 2.cpp  camera copy.cpp  camera.cpp  camera_and_lidar.cpp  camera_and_lidar_2.cpp  gta_rviz.cpp  ncnn_yolo.cpp  ncnn_yolo_2.0.cpp  ncnn_yolo_3.0.cpp  obj_pos_world.cpp  record.cpp  run_ncnn_2.0.hpp  run_ncnn_3.0.hpp  syn.cpp  yolo.cpp  yolo_depthCam.cpp  yolo_lidar.cpp  yolo_lidar_depthCam.cpp
offb/src/include/: run_ncnn_2.0.cpp  run_ncnn_2.0.h  run_yolo_only.cpp  run_yolo_only.h
offb/src/include/yolo/: gt_v7_lidartest1.txt  gt_v7_test1.txt  luo.names  yolov4-tiny-custom_luo.cfg  yolov7-tiny-custom_luo.cfg
offb/src/log/: ball_lidartest1.txt  ball_lidartest1_gt.txt  ball_yolotest1.txt  ball_yolotest1_gt.txt  cam_lidartest1_gt.txt  cam_yolotest1_gt.txt  err_lidartest1_xyz.txt  err_yolotest1_xyz.txt
